--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
               <i class="fas fa-chess text-[#3b82f6] text-xl"></i>
             </div>
             <div>
-              <h3 class="text-xl font-bold mb-2">چالش‌های متنوع</h3>
-              <p class="text-gray-300">
+              <h3 class="text-xl font-bold mb-2 mr-1">چالش‌های متنوع</h3>
+              <p class="text-gray-300 mr-1">
                 مسائل و چالش‌های طراحی شده در مسابقه، طیف گسترده‌ای از سناریوهای واقعی و تئوریک را پوشش می‌دهند.
               </p>
             </div>
@@ -175,8 +175,8 @@
               <i class="fas fa-chart-line text-[#10b981] text-xl"></i>
             </div>
             <div>
-              <h3 class="text-xl font-bold mb-2">سیستم رتبه‌بندی پویا</h3>
-              <p class="text-gray-300">
+              <h3 class="text-xl font-bold mb-2 mr-1">سیستم رتبه‌بندی پویا</h3>
+              <p class="text-gray-300 mr-1">
                 سیستم رتبه‌بندی هوشمند که عملکرد شما را در طول مسابقه ارزیابی و رتبه‌بندی می‌کند.
               </p>
             </div>
@@ -187,8 +187,8 @@
               <i class="fas fa-graduation-cap text-[#3b82f6] text-xl"></i>
             </div>
             <div>
-              <h3 class="text-xl font-bold mb-2">محتوای آموزشی اختصاصی</h3>
-              <p class="text-gray-300">
+              <h3 class="text-xl font-bold mb-2 mr-1">محتوای آموزشی اختصاصی</h3>
+              <p class="text-gray-300 mr-1">
                 دسترسی به محتوای آموزشی تخصصی در حوزه نظریه بازی‌ها و استراتژی‌های تصمیم‌گیری.
               </p>
             </div>
@@ -216,28 +216,28 @@
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#10b981] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">1</span>
-                    <span>تیم استراتژیست‌ها</span>
+                    <span class="mr-2">تیم استراتژیست‌ها</span>
                   </div>
                   <span class="text-[#10b981] font-bold">2450 امتیاز</span>
                 </div>
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#3b82f6] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">2</span>
-                    <span>تیم تحلیل‌گران</span>
+                    <span class="mr-2">تیم تحلیل‌گران</span>
                   </div>
                   <span class="text-[#3b82f6] font-bold">2310 امتیاز</span>
                 </div>
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#f59e0b] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">3</span>
-                    <span>تیم تصمیم‌سازان</span>
+                    <span class="mr-2">تیم تصمیم‌سازان</span>
                   </div>
                   <span class="text-[#f59e0b] font-bold">2150 امتیاز</span>
                 </div>
                 <div class="flex items-center justify-between opacity-70">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">?</span>
-                    <span>شما</span>
+                    <span class="mr-2">شما</span>
                   </div>
                   <span class="text-gray-400">ثبت‌نام کنید!</span>
                 </div>
