--- a/index.html
+++ b/index.html
@@ -208,36 +208,36 @@
                   <i class="fas fa-user text-[#3b82f6]"></i>
                 </div>
                 <div>
-                  <h4 class="font-bold">سیستم رتبه‌بندی</h4>
-                  <p class="text-xs text-gray-400">آخرین به‌روزرسانی: امروز</p>
+                  <h4 class="font-bold mr-1">سیستم رتبه‌بندی</h4>
+                  <p class="text-xs text-gray-400 mr-1">آخرین به‌روزرسانی: امروز</p>
                 </div>
               </div>
               <div class="space-y-4">
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#10b981] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">1</span>
-                    <span class="mr-2">تیم استراتژیست‌ها</span>
+                    <span class="mr-1">تیم استراتژیست‌ها</span>
                   </div>
                   <span class="text-[#10b981] font-bold">2450 امتیاز</span>
                 </div>
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#3b82f6] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">2</span>
-                    <span class="mr-2">تیم تحلیل‌گران</span>
+                    <span class="mr-1">تیم تحلیل‌گران</span>
                   </div>
                   <span class="text-[#3b82f6] font-bold">2310 امتیاز</span>
                 </div>
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#f59e0b] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">3</span>
-                    <span class="mr-2">تیم تصمیم‌سازان</span>
+                    <span class="mr-1">تیم تصمیم‌سازان</span>
                   </div>
                   <span class="text-[#f59e0b] font-bold">2150 امتیاز</span>
                 </div>
                 <div class="flex items-center justify-between opacity-70">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">?</span>
-                    <span class="mr-2">شما</span>
+                    <span class="mr-1">شما</span>
                   </div>
                   <span class="text-gray-400">ثبت‌نام کنید!</span>
                 </div>
