--- a/index.html
+++ b/index.html
@@ -327,7 +327,47 @@
       </div>
     </div>
   </section>
-  
+
+  <!-- Countdown Section -->
+  <section class="py-16 bg-gradient-to-r from-slate-900 to-slate-800">
+      <div class="container mx-auto px-4">
+          <div class="text-center mb-12">
+              <h2 class="text-3xl md:text-4xl font-bold mb-4">مسابقه بزرگ تابستانه لیگک</h2>
+              <p class="text-lg text-slate-300 max-w-2xl mx-auto">
+                  فرصت را از دست ندهید! ثبت نام تا پایان زمان زیر امکان‌پذیر است
+              </p>
+          </div>
+          
+          <div class="flex justify-center">
+              <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+                  <div class="countdown-item rounded-lg p-4 text-center">
+                      <div class="text-4xl font-bold gradient-text mb-1 days">۰۷</div>
+                      <div class="text-slate-300">روز</div>
+                  </div>
+                  <div class="countdown-item rounded-lg p-4 text-center">
+                      <div class="text-4xl font-bold gradient-text mb-1 hours">۱۲</div>
+                      <div class="text-slate-300">ساعت</div>
+                  </div>
+                  <div class="countdown-item rounded-lg p-4 text-center">
+                      <div class="text-4xl font-bold gradient-text mb-1 minutes">۴۵</div>
+                      <div class="text-slate-300">دقیقه</div>
+                  </div>
+                  <div class="countdown-item rounded-lg p-4 text-center">
+                      <div class="text-4xl font-bold gradient-text mb-1 seconds">۳۰</div>
+                      <div class="text-slate-300">ثانیه</div>
+                  </div>
+              </div>
+          </div>
+          
+          <div class="text-center mt-12">
+              <a href="#register" class="btn-glow px-8 py-4 bg-indigo-600 hover:bg-indigo-700 text-white rounded-lg font-medium text-lg transition duration-300">
+                  ثبت نام در مسابقه <i class="fas fa-arrow-left mr-2"></i>
+              </a>
+          </div>
+      </div>
+  </section>
+
+
   <!-- FAQ Section -->
   <section id="faq" class="py-20 bg-[#112240]">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
