--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   </section>
 
   <!-- Countdown Section -->
-  <section class="py-16 bg-gradient-to-r from-slate-900 to-slate-800">
+  <section class="py-20 bg-[#0a192f]">
       <div class="container mx-auto px-4">
           <div class="text-center mb-12">
               <h2 class="text-3xl md:text-4xl font-bold mb-4">مسابقه بزرگ تابستانه لیگک</h2>
