--- a/index.html
+++ b/index.html
@@ -70,19 +70,14 @@
             <a href="#about" class="px-8 py-3 rounded-full font-bold border border-[#3b82f6] text-[#3b82f6] hover:bg-[#3b82f6]/10 transition-all">اطلاعات بیشتر</a>
           </div>
         </div>
-        <div class="md:w-1/2 relative">
-          <div class="relative w-full max-w-md mx-auto">
-            <div class="absolute -top-10 -right-10 w-32 h-32 bg-[#10b981] rounded-full filter blur-3xl opacity-20"></div>
-            <div class="absolute -bottom-10 -left-10 w-32 h-32 bg-[#3b82f6] rounded-full filter blur-3xl opacity-20"></div>
-            <div class="relative bg-[#112240]/50 backdrop-blur-md rounded-2xl overflow-hidden border border-[#1e2b47] glow-box">
-              <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1470&amp;q=80" alt="لیگک" class="w-full h-auto rounded-2xl" />
-              <div class="absolute inset-0 bg-gradient-to-t from-[#0a192f] to-transparent"></div>
-              <div class="absolute bottom-0 right-0 p-6">
-                <h3 class="text-xl font-bold text-white">رقابتی متفاوت در دنیای استراتژی</h3>
-                <p class="text-gray-300 mt-2">یادگیری عمیق نظریه بازی‌ها در محیطی رقابتی و جذاب</p>
-              </div>
+        <div class="md:w-1/2 flex justify-center">
+            <div class="relative">
+                <div class="w-full max-w-md animate-float">
+                    <img src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286_1280.png" alt="لیگک" class="w-full h-auto">
+                </div>
+                <div class="absolute -bottom-10 -left-10 w-24 h-24 rounded-full bg-purple-600/20 animate-pulse-slow"></div>
+                <div class="absolute -top-10 -right-10 w-20 h-20 rounded-full bg-indigo-600/20 animate-pulse-slow"></div>
             </div>
-          </div>
         </div>
       </div>
     </div>
