--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
         <div class="md:w-1/2 flex justify-center">
             <div class="relative">
                 <div class="w-full max-w-md animate-float">
-                    <img src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286_1280.png" alt="لیگک" class="w-full h-auto">
-                    <div class="absolute inset-0 bg-gradient-to-t from-[#0a192f] to-transparent"></div>
-                </div>
+                    <img src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286_1280.png" alt="لیگک" class="w-full h-auto">                </div>
                 <div class="absolute -bottom-10 -left-10 w-24 h-24 rounded-full bg-purple-600/20 animate-pulse-slow"></div>
                 <div class="absolute -top-10 -right-10 w-20 h-20 rounded-full bg-indigo-600/20 animate-pulse-slow"></div>
             </div>
