--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
       
       <div class="border-t border-[#1e2b47] mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
         <p class="text-gray-400 text-sm mb-4 md:mb-0">
-          © ۱۴۰۲ کلیه حقوق برای مسابقه لیگک محفوظ است.
+          "Made By Fardad"
         </p>
         <div class="flex space-x-6 space-x-reverse">
           <a href="#" class="text-gray-400 hover:text-white text-sm">قوانین و مقررات</a>
