--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
       <div class="flex justify-between h-16">
         <div class="flex items-center">
           <a href="#" class="flex items-center space-x-2">
-            <div class="w-10 h-10 rounded-full bg-gradient-to-r from-green-400 to-blue-500 flex items-center justify-center">
-              <i class="fas fa-chess-queen text-white text-xl"></i>
-            </div>
-            <span class="text-xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500">لیگک</span>
+            <img src="src/logo.svg" alt="لوگو" class="w-full h-auto">
           </a>
         </div>
         <div class="hidden md:flex items-center space-x-8">
@@ -73,7 +70,8 @@
         <div class="md:w-1/2 flex justify-center">
             <div class="relative">
                 <div class="w-full max-w-md animate-float">
-                    <img src="https://cdn.pixabay.com/photo/2017/05/09/13/33/laptop-2298286_1280.png" alt="لیگک" class="w-full h-auto">                </div>
+                    <img src="src/ligauk.svg" alt="لیگک" class="w-full h-auto">
+                </div>
                 <div class="absolute -bottom-10 -left-10 w-24 h-24 rounded-full bg-purple-600/20 animate-pulse-slow"></div>
                 <div class="absolute -top-10 -right-10 w-20 h-20 rounded-full bg-indigo-600/20 animate-pulse-slow"></div>
             </div>
