--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="flex justify-between h-16">
         <div class="flex items-center">
           <a href="#" class="flex items-center space-x-2">
-            <img src="src/logo.svg" alt="لوگو" class="w-full h-auto">
+            <img src="src/logo.svg" alt="لوگو" class="w-auto h-11">
           </a>
         </div>
         <div class="hidden md:flex items-center space-x-8">
