--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <div class="md:w-1/2 flex justify-center">
             <div class="relative">
                 <div class="w-full max-w-md animate-float">
-                    <img src="src/ligauk.svg" alt="لیگک" class="w-full h-auto">
+                    <img src="src/ligauk.svg" alt="لیگک" class="w-full h-auto" style="z-index: 9;">
                 </div>
-                <div class="absolute -bottom-10 -left-10 w-24 h-24 rounded-full bg-purple-600/20 animate-pulse-slow"></div>
-                <div class="absolute -top-10 -right-10 w-20 h-20 rounded-full bg-indigo-600/20 animate-pulse-slow"></div>
+                <div class="absolute -bottom-10 -left-10 w-24 h-24 rounded-full bg-green-600/20 animate-pulse-slow" style="z-index: -1;"></div>
+                <div class="absolute -top-10 -right-10 w-20 h-20 rounded-full bg-cyan-600/20 animate-pulse-slow" style="z-index: -1;"></div>
             </div>
         </div>
       </div>
