--- a/index.html
+++ b/index.html
@@ -589,10 +589,8 @@
       <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
         <div class="md:col-span-2">
           <a href="#" class="flex items-center space-x-2 mb-6">
-            <div class="w-10 h-10 rounded-full bg-gradient-to-r from-green-400 to-blue-500 flex items-center justify-center">
-              <i class="fas fa-chess-queen text-white text-xl"></i>
-            </div>
-            <span class="text-xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-500">لیگک</span>
+
+
           </a>
           <p class="text-gray-300 mb-6">
             مسابقه آموزشی نظریه بازی و استراتژی برد لیگک، فرصتی استثنایی برای تقویت مهارت‌های تحلیلی و تصمیم‌گیری استراتژیک در محیطی رقابتی و جذاب.
@@ -612,7 +610,9 @@
             </a>
           </div>
         </div>
-        
+          <a href="#" class="flex items-center space-x-2">
+            <img src="src/logo.svg" alt="لوگو" class="w-auto h-11">
+          </a>
         <div>
           <h3 class="text-lg font-bold text-white mb-6">لینک‌های سریع</h3>
           <ul class="space-y-3">
