--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
   <!-- Navigation -->
   <nav class="fixed w-full z-50 bg-[#0a192f]/90 backdrop-blur-md border-b border-[#1e2b47]">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <div class="max-w-7xl mx-auto sm:px-6 lg:px-8" style="padding-left: 1.2rem; padding-right: 1.2rem;">
       <div class="flex justify-between h-16">
         <div class="flex items-center">
           <a href="#" class="flex items-center space-x-2">
