--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="w-16 h-16 bg-[#112240] rounded-full flex items-center justify-center mb-6 mx-auto">
             <i class="fas fa-trophy feature-icon"></i>
           </div>
-          <h3 class="text-xl font-bold text-center mb-4">جوایز ارزشمند</h3>
+          <h3 class="text-xl font-bold text-center mb-4">اهدای جوایز</h3>
           <p class="text-gray-300 text-center">
             به برندگان مسابقه جوایز نقدی و غیرنقدی ارزشمند و همچنین فرصت‌های شغلی در شرکت‌های معتبر اعطا می‌شود.
           </p>
@@ -126,7 +126,7 @@
           <div class="w-16 h-16 bg-[#112240] rounded-full flex items-center justify-center mb-6 mx-auto">
             <i class="fas fa-users feature-icon"></i>
           </div>
-          <h3 class="text-xl font-bold text-center mb-4">جامعه حرفه‌ای</h3>
+          <h3 class="text-xl font-bold text-center mb-4">کار گروهی</h3>
           <p class="text-gray-300 text-center">
             به جامعه‌ای از افراد علاقه‌مند به استراتژی و نظریه بازی‌ها بپیوندید و شبکه ارتباطی خود را گسترش دهید.
           </p>
@@ -200,38 +200,38 @@
                   <i class="fas fa-user text-[#3b82f6]"></i>
                 </div>
                 <div>
-                  <h4 class="font-bold mr-1">سیستم رتبه‌بندی</h4>
-                  <p class="text-xs text-gray-400 mr-1">آخرین به‌روزرسانی: امروز</p>
+                  <h4 class="font-bold mr-1">جدول امتیازات</h4>
+                  <p class="text-xs text-gray-400 mr-1">.پس از رویداد به روز رسانی میشود</p>
                 </div>
               </div>
               <div class="space-y-4">
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#10b981] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">1</span>
-                    <span class="mr-1">تیم استراتژیست‌ها</span>
+                    <span class="mr-1">تیم الف</span>
                   </div>
-                  <span class="text-[#10b981] font-bold">2450 امتیاز</span>
+                  <span class="text-[#10b981] font-bold">؟</span>
                 </div>
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#3b82f6] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">2</span>
-                    <span class="mr-1">تیم تحلیل‌گران</span>
+                    <span class="mr-1">تیم ب</span>
                   </div>
-                  <span class="text-[#3b82f6] font-bold">2310 امتیاز</span>
+                  <span class="text-[#3b82f6] font-bold">؟</span>
                 </div>
                 <div class="flex items-center justify-between">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-[#f59e0b] rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">3</span>
-                    <span class="mr-1">تیم تصمیم‌سازان</span>
+                    <span class="mr-1">تیم ج</span>
                   </div>
-                  <span class="text-[#f59e0b] font-bold">2150 امتیاز</span>
+                  <span class="text-[#f59e0b] font-bold">؟</span>
                 </div>
                 <div class="flex items-center justify-between opacity-70">
                   <div class="flex items-center">
                     <span class="w-6 h-6 bg-gray-500 rounded-full flex items-center justify-center text-white text-xs font-bold mr-2">?</span>
-                    <span class="mr-1">شما</span>
+                    <span class="mr-1">؟؟؟</span>
                   </div>
-                  <span class="text-gray-400">ثبت‌نام کنید!</span>
+                  <span class="text-gray-400">؟؟؟</span>
                 </div>
               </div>
             </div>
