--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <div>
                   <h4 class="font-bold mr-1">جدول امتیازات</h4>
-                  <p class="text-xs text-gray-400 mr-1">.پس از رویداد به روز رسانی میشود</p>
+                  <p class="text-xs text-gray-400 mr-1">پس از رویداد به روز رسانی میشود</p>
                 </div>
               </div>
               <div class="space-y-4">
