--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-6 h-6 bg-blue-500 rounded-full absolute left-1/2 transform -translate-x-1/2 -mt-3 animate-pulse"></div>
+                    <div class="w-6 h-6 bg-blue-500 rounded-full absolute left-1/2 transform -translate-x-1/2 -mt-3"></div>
                 </div>
             </div>
         </div>
