--- a/index.html
+++ b/index.html
@@ -337,15 +337,8 @@
   </section>
 
   <!-- Countdown Section -->
-  <section class="py-20 bg-[#0a192f]">
+  <section class="pb-20 pt-2 bg-[#0a192f]">
       <div class="container mx-auto px-4">
-          <div class="text-center mb-12">
-              <h2 class="text-3xl md:text-4xl font-bold mb-4">مسابقه بزرگ تابستانه لیگک</h2>
-              <p class="text-lg text-slate-300 max-w-2xl mx-auto">
-                  فرصت را از دست ندهید! ثبت نام تا پایان زمان زیر امکان‌پذیر است
-              </p>
-          </div>
-          
           <div class="flex justify-center">
               <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                   <div class="countdown-item rounded-lg p-4 text-center">
