--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <img src="src/logo.svg" alt="لوگو" class="w-auto h-11">
           </a>
         </div>
-        <div class="hidden md:flex items-center space-x-8">
-          <a href="#about" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium animated-border">درباره مسابقه</a>
-          <a href="#features" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium animated-border">ویژگی‌ها</a>
-          <a href="#timeline" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium animated-border">زمان‌بندی</a>
-          <a href="#faq" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium animated-border">سوالات متداول</a>
-          <a href="#register" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium animated-border">ثبت نام</a>
+        <div class="hidden md:flex items-center">
+          <a href="#about" class="text-gray-300 hover:text-white px-4 py-2 rounded-md text-sm font-medium animated-border">درباره مسابقه</a>
+          <a href="#features" class="text-gray-300 hover:text-white px-4 py-2 rounded-md text-sm font-medium animated-border">ویژگی‌ها</a>
+          <a href="#timeline" class="text-gray-300 hover:text-white px-4 py-2 rounded-md text-sm font-medium animated-border">زمان‌بندی</a>
+          <a href="#faq" class="text-gray-300 hover:text-white px-4 py-2 rounded-md text-sm font-medium animated-border">سوالات متداول</a>
+          <a href="#register" class="text-gray-300 hover:text-white px-4 py-2 rounded-md text-sm font-medium animated-border">ثبت نام</a>
         </div>
         <div class="md:hidden flex items-center">
           <button id="mobile-menu-button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none">
