--- a/index.html
+++ b/index.html
@@ -592,10 +592,7 @@
               <i class="fab fa-telegram"></i>
             </a>
             <a href="#" class="social-icon w-10 h-10 bg-[#112240] rounded-full flex items-center justify-center text-gray-300 hover:text-white hover:bg-[#1da1f2]">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="social-icon w-10 h-10 bg-[#112240] rounded-full flex items-center justify-center text-gray-300 hover:text-white hover:bg-[#4267b2]">
-              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-instagram"></i>
             </a>
             <a href="#" class="social-icon w-10 h-10 bg-[#112240] rounded-full flex items-center justify-center text-gray-300 hover:text-white hover:bg-[#0077b5]">
               <i class="fab fa-linkedin-in"></i>
